manifests/sample-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-openshift
  namespace: sample-app
spec:
  selector:
    app: hello-openshift
  ports:
  - name: http
    port: 8080
    targetPort: 8080
