manifests/sample-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-openshift
  namespace: sample-app
spec:
  to:
    kind: Service
    name: hello-openshift
  port:
    targetPort: http
